AP-23812: Fix mountpoint editing
AP-23812 (Move MountTable to new org.knime.core.workbench plug-in (retire workbench code))